# getwall

./: Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
getwall/: application.py  containers.py  models.py  redis.py  services.py
tests/: tests.py
